--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hardhat fund me",
+  "name": "hardhat",
   "author": "Akachukwu David",
   "version": "1.0.0",
   "devDependencies": {
